--- a/Lab_3/style.css
+++ b/Lab_3/style.css
@@ -13,7 +13,7 @@ background-color: lightgrey;
 margin-left: 200px;
 margin-right: 200px;
 padding-bottom: 70px;
-border: 15px solid yellowgreen;
+border: 15px solid rgba(189, 169, 169, 0);
 resize: both;
 
 
@@ -55,10 +55,7 @@ resize: both;
     .header  {
 
         margin: 0%;
-        
-        
-
-            
+                    
     }
     .first{
         margin : 0%;
