--- a/Lab_3/style.css
+++ b/Lab_3/style.css
@@ -7,7 +7,7 @@
 
 
 .first {
- text-align: center;
+ text-align: justify;
  display: inline-block;
 background-color: lightgrey;
 margin-left: 200px;
@@ -17,9 +17,8 @@ border: 15px solid rgba(189, 169, 169, 0);
 resize: both;
 
 
-
-
 }
+
 .im {
     display: block;
     margin-left: auto;
