--- a/Lab_3/style.css
+++ b/Lab_3/style.css
@@ -6,6 +6,8 @@
 
 
 
+
+
 .first {
  text-align: justify;
  display: inline-block;
@@ -13,27 +15,18 @@ background-color: lightgrey;
 margin-left: 200px;
 margin-right: 200px;
 padding-bottom: 70px;
+border-style: solid;
 border: 15px solid rgba(189, 169, 169, 0);
 resize: both;
 
 
 }
 
-.im {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 24%;
-  }
+.button {
 
-.Second {
-    
-    padding: 20px;
-    margin-left: 450px;
-    resize: both;
-    
-    }
-    
+}
+
+
         .header {
             display: inline-block;
             width: 100%;
@@ -45,10 +38,7 @@ resize: both;
             background-color: lightgrey;
            border-style: solid;
            resize: horizontal;
-        
-            
-            
-            }
+        }
             
 @media screen and (max-width: 800px) {
     .header  {
@@ -59,12 +49,6 @@ resize: both;
     .first{
         margin : 0%;
    
-    }
-    .Second{
-        margin: 0%;
-    }
-    .third{
-        margin: 0%;
     }
 }
 
